# KindleClippings

./: .gitignore  KindleClippings.py  clippings.py  com.kindle.autosync.plist  com.kindle.usb.autosync.plist  kindle_auto_sync.py  parse_clippings.py  pyproject.toml  setup_auto_sync.sh  setup_usb_sync.sh  sync_kindle_clippings.sh  to-obsidian.sh
src/: clippings.py
tests/: test_german_highlight.py
