[project]
name = "kindleclippings"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fpdf (>=1.7.2,<2.0.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "mdutils (>=1.6.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
types-fpdf2 = "^2.8.2.20250318"

